# SwissExpenseTracker

./: .gitignore  README.md  pyproject.toml
Pipeline/: OpenAI.py  config.py  libs.py  run_Pipeline.py
Pipeline/DebitCard/: 01_ing_DebitCard.py  02_imp_DebitCard.py  03_rfn_DebitCard.py  04_mrg_DebitCard.py  05_use_unify_subjectCategories.py
Pipeline/Viseca/: 01_ing_Viseca.py  02_imp_Viseca.py  03_rfn_Viseca.py  04_mrg_Viseca.py
Pipeline/mrg/: 01_mrg_DebitCard_Viseca.py
